buildscript {
    ext {
        springBootVersion = '2.4.0'
        dependencyManagementVersion = '1.0.10.RELEASE'
        lombokVersion = '1.18.16'
        swaggerVersion = '2.9.2'
    }
    repositories {
        jcenter()
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
        classpath "io.spring.gradle:dependency-management-plugin:${dependencyManagementVersion}"
    }
}

allprojects{
    repositories {
        mavenLocal()
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'groovy'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    group = 'com.base.api'
    version = '0.0.1-SNAPSHOT'
    sourceCompatibility = '15'
    targetCompatibility = '15'

    compileJava {
        options.compilerArgs += ["--enable-preview"]
    }

    test {
        jvmArgs '--enable-preview'
    }

    tasks.withType(GroovyCompile) {
        configure(groovyOptions.forkOptions) {
            memoryMaximumSize = '1g'
            jvmArgs = ['-XX:MaxPermSize=512m', '-Xms512m', '-Xmx1g', '--enable-preview']
        }
    }

    compileTestGroovy {
        configure(groovyOptions.forkOptions) {
            memoryMaximumSize = '1g'
            jvmArgs = ['-Xms512m', '-Xmx1g', '--enable-preview']
        }
    }

    dependencies {
        compile("org.springframework.boot:spring-boot-devtools")
        implementation('mysql:mysql-connector-java')
        implementation("com.google.guava:guava:28.2-jre")
        implementation "ch.qos.logback:logback-classic:1.2.3"
        implementation('com.h2database:h2')
        implementation "org.projectlombok:lombok:${lombokVersion}"
        annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
        implementation "io.springfox:springfox-swagger2:${swaggerVersion}"
        implementation "io.springfox:springfox-swagger-ui:${swaggerVersion}"
        implementation "org.springframework.boot:spring-boot-starter-web:${springBootVersion}"
        implementation "org.springframework.boot:spring-boot-starter-webflux:${springBootVersion}"
        implementation "org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}"
        implementation "org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}"
        annotationProcessor "org.springframework.boot:spring-boot-configuration-processor:${springBootVersion}"

        testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
        testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
        testImplementation 'org.spockframework:spock-core:1.2-groovy-2.4'
        testImplementation 'org.spockframework:spock-spring:1.2-groovy-2.4'
        testImplementation group: 'cglib', name: 'cglib-nodep', version: '3.3.0'
        testImplementation "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
    }
}


project(':common') {
    bootJar {
        enabled = false
    }
    jar {
        enabled = true
    }
}

project(':api') {
    dependencies {
        implementation project(':common')
    }
}